app/assets/stylesheets/chrome.css
/* ... */
/* Tables */
table {
  text-align: left;
}
tr {
  border-bottom: 1px solid #fff;
  background-color: #eee;
}
tr:hover {
  background-color: #e9e9e9;
}
td, th {
  padding: 0.667em 1.5em 0.667em 10px;
}
th {
  background-color: #bbb;
  font-size: 0.667em;
  text-transform: uppercase;
}
table.regions {
}

/* Global */
.avatar {
  background : transparent url('user.png') no-repeat scroll top right;
  width      : 26px;
  height     : 25px;
  position   : relative;
  float      : left;
}

/*
 *
 * Header
 *
 */
#header {
  color: #fff;
  background: #808080 url(cdot-background.jpg) center top repeat scroll;
     -moz-box-shadow: 0 4px 0 rgba(85, 85, 85, 0.5);
  -webkit-box-shadow: 0 4px 0 rgba(85, 85, 85, 0.5);
          box-shadow: 0 4px 0 rgba(85, 85, 85, 0.5);
}
#pages a {
  background: #de8700 url(pages-menu-gradient.png) center center repeat-x scroll;
  color: #fff;
  margin-right: 10px;
  font-weight: bold;
  text-decoration: none;
  float: left;
  padding: 0.4em 1em;
  border: 1px solid #b06a00;
  border-top: 1px solid #d68800;
  border-bottom: 1px solid #844700;
  -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
          border-radius: 5px;
}
#pages a:hover {
  color: #fff;
}
#site-title {
  padding-top: 10px;
}
#site-title a {
  background: url(cdot-logo.png) 0 0 no-repeat scroll;
  float: left;
  width: 125px;
  height: 60px;
  text-indent: -9999px;
}
#site-title a:hover {
}
#pages {
  margin-top: 20px;
  margin-left: 30px;
  float: left;
}
#header .meta-separator {
  color: #777;
  margin: 0 0.25em;
}
#access {
  float:right;
  padding-top: 0.5em;
}
#access > span {
  display: block;
  font-size: 11px;
  font-weight: bold;
  text-transform: uppercase;
  text-align: center;
  color: #b8d5e6;
}

#access .account,
#access .account .my-points,
#access .account .my-supports,
#access .menu {
  float: left;
  font-size: 0.9em;
}
#access .account span {
  padding-left: 1.2em;
  font-size: 1.8em;
  font-weight: bold;
}
#access .account > div {
  margin-right: 1em;
}
#access .account .my-points span {
  background: transparent url('marker-bike.png') no-repeat scroll center left;
  color: lightblue;
}
#access .account .my-supports span {
  background: transparent url('thumbs-up.png') no-repeat scroll center left;
  color: pink;
}
#access .menu {
  position: relative;
}
#access .menu a {
  display: block;
  color: #fff;
  font-weight: bold;
  text-decoration: none;
  margin: 0;
  padding: 0.1em 0.3em;
}
#access .menu img {
  height: 40px;
  vertical-align: middle;
}
#access .menu span.arrow-s {
  font-size: 0.5em;
  border-top-color: #addcf0;
  margin: 0 5px;
}
#access .menu li {
  background-color: #42b4e2;
  border: 0;
  display: none;
  line-height: 1.5;
  position: absolute;
  top: 100%;
  right: 0;
  white-space: nowrap;
}
#access .menu li:first-child {
  display: block;
  line-height: 0px;
  position: relative;
  top: 0;
}
#access .menu:hover li {
  display:block;
}
.sign-in-text {
  float: left;
  color: #888;
  font-size: 0.8em;
  line-height: 2;
}
.sign-in {
  float: left;
  width: 16px;
  height: 16px;
  text-indent: -9999px;
  margin: 0.25em 0 0 0.25em;
}
.facebook-login {
  background: url("facebook-login-16.gif") no-repeat scroll 0 0 transparent;
}
.twitter-login {
  background: url("twitter-login-16.gif") no-repeat scroll 0 0 transparent;
}
#access .sign-in {
  width: 32px;
  height: 32px;
  text-indent: -9999px;
}
#access .facebook-login {
  background: url("facebook-login-32.png") no-repeat scroll 0 0 transparent;
}
#access .twitter-login {
  background: url("twitter-login-32.png") no-repeat scroll 0 0 transparent;
}

/*
 *
 * Map Zoom Controls
 *
 */
.leaflet-control-zoom {
  background-color: transparent;
}
.leaflet-control-zoom a {
  height: 27px;
  width: 27px;
  background-color: rgba(255, 255, 255, 0.9);
  border-radius: 0;
     -moz-box-shadow: -2px 2px 0 rgba(85, 85, 85, 0.5);
  -webkit-box-shadow: -2px 2px 0 rgba(85, 85, 85, 0.5);
          box-shadow: -2px 2px 0 rgba(85, 85, 85, 0.5);
}
.leaflet-control-zoom a:active {
  position: relative;
  top: 1px;
  right: 1px;
     -moz-box-shadow: -1px 1px 0 rgba(85, 85, 85, 0.5);
  -webkit-box-shadow: -1px 1px 0 rgba(85, 85, 85, 0.5);
          box-shadow: -1px 1px 0 rgba(85, 85, 85, 0.5);
}
.leaflet-control-zoom-in {
  background-image: url(zoom-in.gif);
}
.leaflet-control-zoom-out {
  background-image: url(zoom-out.gif);
}

/*
 *
 * Feature Popup
 *
 */
.information-panel-content .feature,
.information-panel-content .page {
  background-color: white;
  border: 1px solid #a8a8a8;
  padding: 1.5em;
     -moz-box-shadow: -4px 4px 0 rgba(85, 85, 85, 0.5);
  -webkit-box-shadow: -4px 4px 0 rgba(85, 85, 85, 0.5);
          box-shadow: -4px 4px 0 rgba(85, 85, 85, 0.5);
}
.information-panel-content {
  line-height: 1.5;
}

.information-panel-content-overflow {
  height: 5px;
  background: url("popup-overflow.png") repeat-x scroll 0 0 transparent;
  position: absolute;
  right: 1em;
  bottom: 1px;
  left: 1em;
  border-bottom: 0.75em solid #fff;
  z-index: 100;
  display:none;
}
.overflowing .information-panel-content-overflow {
  display:block;
}

/* Feature Popup - Content */
.feature h2 {
  font-size: 1.5em
}
.feature .name {
  margin: 0 0 0.25em;
}
.feature-header > .avatar {
  width: 48px;
  height: 48px;
  margin-right : 0.8em;
}
.feature .description {
  clear: both;
  font-size: 0.8em;
  line-height: 1.3em;
}
.feature-submitter {
}
.feature.show .weak {
  color : #888;
}
.feature textarea {
  width : 90%;
}
.feature fieldset.auth {
  margin: 0.5em 0 1em;
}
.feature fieldset.auth div {
  margin-bottom: 0;
}
.feature.new p {
  margin-bottom: 0;
}
.feature .sign-in-text {
  font-size: 0.7em;
  color: #444;
  line-height: 2.5em;
}
.feature .sign-in {
  width: 17px;
  height: 17px;
  margin-top: 0.5em;
}
.feature div {
  margin-bottom: 1em;
}
.feature .feature-header {
  line-height: 1em;
}
.feature .location_types input[type=checkbox] {
   position: absolute;
   top: -9999px;
   left: -9999px;
}
/* ... */

